# django-migration-zero

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  manage.py  pyproject.toml  settings.py  setup.cfg
.ambient-package-update/: metadata.py
.ambient-package-update/templates/snippets/: content.tpl  installation.tpl  tagline.tpl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  quality-gate.yml  release.yml
django_migration_zero/: __init__.py  admin.py  apps.py  exceptions.py  managers.py  models.py  settings.py
django_migration_zero/helpers/: file_system.py  logger.py
django_migration_zero/locale/de/LC_MESSAGES/: django.mo  django.po
django_migration_zero/management/commands/: handle_migration_zero_reset.py  reset_local_migration_files.py
django_migration_zero/migrations/: 0001_initial.py
django_migration_zero/services/: deployment.py  local.py
docs/: conf.py  index.rst
docs/features/: 01_introduction.md  02_configuration.md  03_workflow.md  04_common_issues_and_solutions.md  05_architecture.md  06_management_commands.md  introduction.md  usage.md
migration_zero/: __init__.py  admin.py  managers.py  models.py  settings.py
migration_zero/helpers/: file_system.py  logger.py
migration_zero/management/commands/: handle_migration_reset.py  reset_local_migration_files.py
migration_zero/migrations/: 0001_initial.py
migration_zero/services/: local.py
tests/: test_admin.py  test_managers.py  test_models.py  test_settings.py
tests/helpers/: test_file_system.py  test_logger.py
tests/management/commands/: test_handle_migration_zero_reset.py  test_reset_local_migration_files.py
tests/services/: test_deployment.py  test_local.py
